# wiki

./: .gitignore  Cargo.toml  README.md  next_steps.md
docs/: apples.md  rawr.md
docs/plans/: database_coverage.md  http_handlers.md  serve_docs.md  test_utilities.md
frontend/: index.html  main.js  styles.css
frontend/login/: index.html  main.js
plans/: requirements.md
src/: app.rs  lib.rs  main.rs
src/db/: mod.rs
src/docs/: format.html  main.js  mod.rs  pull_jwt_or_forward_to_login.js
src/user/: mod.rs
tests/: db_tests.rs  docs_tests.rs  http_handlers.rs  user_tests.rs
