[package]
name = "wiki"
version = "0.0.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
toml = "0.9.5"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6.6", features = ["fs"] }
hyper = { version = "1.7.0", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
rusqlite = "0.37.0"
anyhow = "1.0.99"
lazy_static = "1.5.0"
chrono = "0.4.41"
comrak = "0.41.0"
jsonwebtoken = "9.3.1"
